--- a/cat-home/deploy/manifest.yml
+++ b/cat-home/deploy/manifest.yml
@@ -9,9 +9,9 @@ build:
   run:
     workDir: ./                                 # workDir是代码仓库的相对目录
     cmd:
-      - sh provider/deploy/compile.sh   # cd 进 workDir 后,调用哪个脚本进行打包
+      - sh cat-home/deploy/compile.sh   # cd 进 workDir 后,调用哪个脚本进行打包
   target:
-    distDir: ./provider/target/    # distDir是代码仓库的相对目录
+    distDir: ./cat-home/target/    # distDir是代码仓库的相对目录
     files:                                      # files中的文件描述是相对distDir的
       - ./*.war
       - ../deploy
