--- a/deploy/manifest.yml
+++ b/deploy/manifest.yml
@@ -6,7 +6,7 @@ build:
   run:
     workDir: ./                                 # workDir是代码仓库的相对目录
     cmd:
-      - sh cat-home/deploy/compile.sh                    # cd 进 workDir 后,相对于当前 pwd 下,调用哪个脚本进行打包
+      - sh deploy/compile.sh                    # cd 进 workDir 后,相对于当前 pwd 下,调用哪个脚本进行打包
   target:
     distDir: ./                                 # distDir是代码仓库的相对目录
     files:                                      # files中的文件描述是相对distDir的
