--- a/cat-home/pom.xml
+++ b/cat-home/pom.xml
@@ -25,6 +25,12 @@
       <dependency>
          <groupId>org.unidal.framework</groupId>
          <artifactId>web-framework</artifactId>
+         <exclusions>
+            <exclusion>
+               <artifactId>cat-client</artifactId>
+               <groupId>com.dianping.cat</groupId>
+            </exclusion>
+         </exclusions>
       </dependency>
       <dependency>
          <groupId>javax.servlet</groupId>
@@ -34,6 +40,12 @@
       <dependency>
          <groupId>org.unidal.framework</groupId>
          <artifactId>dal-jdbc</artifactId>
+         <exclusions>
+            <exclusion>
+               <artifactId>cat-client</artifactId>
+               <groupId>com.dianping.cat</groupId>
+            </exclusion>
+         </exclusions>
       </dependency>
       <dependency>
          <groupId>javax.servlet</groupId>
