--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 		<dependencies>
 			<dependency>
 				<groupId>com.dianping.cat</groupId>
-				<artifactId>cat-client</artifactId>
-				<version>${project.version}</version>
+				<artifactId>maoyan-monitor</artifactId>
+				<version>1.4.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.dianping.cat</groupId>
