--- a/cat-home/deploy/online/manifest.yml
+++ b/cat-home/deploy/online/manifest.yml
@@ -18,7 +18,7 @@ build:
 autodeploy:
     targetDir: /opt/meituan/mobile/movie-monitor/  # build 成功后会把 build.target 目录下的文件拷贝到该目录下
     env:
-    run: sh online/run.sh                       # run 和 check 的路径都是相对 targetDir
-    check: sh online/check.sh
+    run: sh deploy/online/run.sh                       # run 和 check 的路径都是相对 targetDir
+    check: sh deploy/online/check.sh
     checkRetry: 3                               # 缺省值为1，可加大增加check命令执行次数，拉长检查时间，check.sh中为30s，这样check的时间就为60s
     CheckInterval: 1s                           # 两次 check 的时间间隔, 缺省值为1s，建议此数值不宜过大。
