--- a/cat-client/pom.xml
+++ b/cat-client/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>parent</artifactId>
 		<version>1.4.0</version>
 	</parent>
-	<version>1.4.0-SNAPSHOT</version>
+	<version>1.4.0.maoyancat-SNAPSHOT</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>maoyan-monitor</artifactId>
 	<name>maoyan-monitor</name>
